--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/cliente
-spring.datasource.username=root
-spring.datasource.password=admin
+spring.datasource.url=jdbc:mysql://cliente.ctk5mxsgzdtq.us-east-1.rds.amazonaws.com:3306/clientdb
+spring.datasource.username=admin
+spring.datasource.password=intercorp
